--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ nav ul li a:hover::after{
     background: #ff004f;
 }
 .contact-right form{
-    width: 100%;
+    width: 80%;
 }
 form input, form textarea{
     width: 100%;
@@ -297,6 +297,7 @@ form .btn2{
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
+    border-radius: 10px;
 }
 .copyright{
     width: 100%;
@@ -310,7 +311,7 @@ form .btn2{
     color: #ff004f;
 }
 /*------------css for small screens-----------*/
-nav .fas{
+nav .fa-solid{
     display: none;
 }
 @media only screen and (max-width: 600px){
@@ -324,7 +325,7 @@ nav .fas{
     .header-text h1{
         font-size: 30px;
     }
-    nav .fas{
+    nav .fa-solid{
         display: block;
         font-size: 25px;
     }
@@ -343,7 +344,7 @@ nav .fas{
         display: block;
         margin: 25px;
     }
-    nav ul .fas{
+    nav ul .fa-solid{
         position: absolute;
         top: 25px;
         left: 25px;
@@ -364,6 +365,12 @@ nav .fas{
     .tab-links{
         font-size: 10px;
         margin-right: 15px;
+    }
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
+    .copyright{
+        font-size: 13px;
     }
 } 
 
