--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background: #080808;
     color: #fff;
@@ -14,6 +17,7 @@ body{
     background-image: url(images/kunj\ 3.jpg);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 .container{
     padding: 10px 10%;
@@ -37,14 +41,14 @@ nav ul li{
 }
 
 nav ul li a{
-    color: #e9f1f1;
+    color: #fff;
     text-decoration: none;
     font-size: 18px;
     position: relative;
 }
 nav ul li a::after{
     content:'';
-    width: 0%;
+    width: 0;
     height: 3px;
     background: #ff004f;
     position: absolute;
@@ -59,7 +63,7 @@ nav ul li a:hover::after{
     margin-top: 20%;
     font-size: 30px;
 }
-.header-text{
+.header-text {
     font-size: 30px;
     margin-top: 20px;
 }
@@ -117,7 +121,7 @@ nav ul li a:hover::after{
 }
 
 .tab-links.active-link::after{
-    width: 50%;
+    width: 50px;
 }
 
 .tab-contents ul li{
@@ -319,7 +323,7 @@ nav .fa-solid{
         background-image: url(images/me\ 3.jpg);
     }
     .header-text{
-        margin-top: 100%;
+        margin-top: 140%;
         font-size: 16px;
     }
     .header-text h1{
@@ -357,14 +361,14 @@ nav .fa-solid{
         flex-basis: 100%;
     }
     .about-col-1{
-        margin-bottom: 15px;
+        margin-bottom: 30px;
     }
     .about-col-2{
         font-size: 14px;
     }
     .tab-links{
-        font-size: 10px;
-        margin-right: 15px;
+        font-size: 16px;
+        margin-right: 20px;
     }
     .contact-left, .contact-right{
         flex-basis: 100%;
